chore: integrate with zodios client
