# apps/api/api.yaml
@@ -26,7 +26,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NewTodoItem'
+              $ref: '#/components/schemas/TodoItemPayload'
       responses:
         '201':
           description: The newly created todo item
@@ -66,7 +66,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TodoError'
-    put:
+    patch:
       summary: Update a todo item by ID
       operationId: updateTodoById
       requestBody:
@@ -74,7 +74,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UpdateTodoItem'
+              $ref: '#/components/schemas/UpdateTodoItemPayload'
       responses:
         '200':
           description: The updated todo item
@@ -127,27 +127,24 @@ components:
         - title
         - completed
 
-    NewTodoItem:
+    TodoItemPayload:
       type: object
       properties:
         title:
           type: string
           description: The title of the new todo item
-        completed:
-          type: boolean
-          description: Whether the new todo item is completed or not
       required:
         - title
 
-    UpdateTodoItem:
+    UpdateTodoItemPayload:
       type: object
       properties:
         title:
           type: string
-          description: The updated title of the todo item
+          description: The new title of the todo item
         completed:
           type: boolean
-          description: Whether the updated todo item is completed or not
+          description: Whether the todo item is completed or not
           
     TodoError:
       type: object
